[build-system]
requires = ["setuptools", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "clams_utils"
description = "a collection of smaller helper/utility code of CLAMS platform"
dynamic = ["version", "license", "readme", "authors"]
