[metadata]
name = clams-utils
long_description = file: README.md
license = Apache-2.0
author = "Brandeis Lab for Linguistics and Computation"
author_email = "admin@clams.ai"

[options]
packages = find:
install_requires =
    requests
    mmif-python

[options.entry_points]
console_scripts =
    clams-aapb = clams_utils.aapb.converter_aapbjson:main